# imageToPptx

image2pptx_service/: .gitignore  README.md  pyproject.toml  requirements.txt
image2pptx_service/app/: __init__.py  config.py  main.py  paddle_runtime.py  schemas.py  service.py
image2pptx_service/app/pipeline/: audit.py  layout.py  manifest.py  ocr.py  pptx_builder.py  preprocess.py  render.py  segment.py
image2pptx_service/app/utils/: colors.py  files.py  geometry.py  image.py
image2pptx_service/app/workers/: tasks.py
image2pptx_service/tests/: test_colors.py  test_manifest.py  test_ocr.py  test_pipeline_smoke.py  test_pptx_builder.py  test_segment.py  test_service.py  test_tasks.py  test_yolo_segment.py
