[project]
name = "image2pptx-service"
version = "0.1.0"
description = "FastAPI MVP service for converting images into editable PowerPoint files."
authors = [{name = "OpenAI Codex", email = "codex@openai.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<0.116.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "python-multipart>=0.0.9,<0.0.10",
  "pydantic>=2.7.0,<3.0.0",
  "pillow>=10.3.0,<11.0.0",
  "opencv-python-headless>=4.10.0.84,<5.0.0.0",
  "numpy>=2.0.0,<3.0.0",
  "python-pptx>=0.6.23,<0.7.0",
  "pytesseract>=0.3.10,<0.4.0",
  "setuptools>=69.0.0,<81.0.0"
]

[project.optional-dependencies]
paddleocr = [
  "paddleocr>=2.8.0,<3.0.0",
  "paddlepaddle>=2.6.1,<3.0.0"
]
yolo = ["ultralytics>=8.3.0,<9.0.0"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
